[package]
name = "slide"
version = "0.1.0"
authors = ["Benjamin Schmid <dev@schmidb.ch>"]
description = "Generate templates for competitive programming"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
shellexpand = "2.0.0"
regex = "1.3.4"
inotify = "0.8.2"
wait-timeout = "0.2.0"
